--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-hello world
+<!DOCTYPE html>
+
+<html>
+<head>
+
+</head>
+
+<body>
+	<canvas height="500" width="500" id="canvas"></canvas>
+
+	<script type="text/javascript" src ="js/index.js"></script>
+</body>
+</html>
