added contents of help modal.

--- a/responsiveness/index.html
+++ b/responsiveness/index.html
@@ -12,7 +12,15 @@
 		<div id="help-display">
 			<a href="#" id="close-popup">X</a>
 			<h1>How To:</h1>
-			<p></p>
+			<ul>
+				<li>
+					You can choose a website to test its responsiveness.
+					Just enter the website address in the textfield located at the top of page then click the <strong>Go</strong> button.
+				</li>
+				<li>Choose among the different screen resolutions provided at the top of the page.</li>
+				<li> The <strong>Rotate</strong> button lets you rotate the current selected dimensions to switch its width and height.</li>
+				<li> The <strong>Refresh</strong> button lets you reload the current page you are loading.</li>
+			</ul>
 		</div>
 		<div id="overlay">
 		</div>
