disabled custom viewport size

--- a/responsiveness/index.html
+++ b/responsiveness/index.html
@@ -45,7 +45,7 @@
 			<li data-res="768x1024" class="nav-link"><a href='#'>768 x 1024</a></li>
 			<li data-res="custom" class="nav-link">
 				<a href='#'>
-					<input id="viewPortW" type="text" value="320"> x <input id="viewPortH" type="text" value="240">
+					<input id="viewPortW" type="text" value="320" disabled> x <input id="viewPortH" type="text" value="240" disabled>
 				</a>
 			</li>
 			<li data-res="help" class="nav-link"><a href='#'>Help</a></li>
