--- a/responsiveness/index.html
+++ b/responsiveness/index.html
@@ -5,6 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Responsive Test v.1.2.1</title>
 	<link rel="stylesheet" href="public/css/styles.css">
+	<link rel="icon" href="public/img/favicon.ico" type="image/x-icon"/>
+<link rel="shortcut icon" href="public/img/favicon.ico" type="image/x-icon"/>
 </head>
 <body>
 	<div id="help-popup" class="hide">
