--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html>
 <head>
 	<meta charset="utf-8">
@@ -6,24 +6,141 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<title>Nuat Thai by Golden Leaf</title>
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet/less" href="css/bootstrap-overrides.less">
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+
+	<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+
+	<script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js" ></script>
+
+<style>
+
+.navbar-brand {
+	padding     : 5px 45px;
+	line-height : 58px;
+}
+
+.navbar-nuat {
+	background-color : #0917da;
+	border-color     : #0917da;
+	margin-bottom    : 0px;
+	border-radius    : 0px;
+	min-height       : 70px;   
+}
+
+
+
+.image-container {
+	position   : absolute;
+	width      : 100%;
+	height     : 100%;
+	overflow   : hidden;
+	text-align : center;
+}
+
+.image-container > .splash-bg {
+	width          : 105%;
+	height         : 105%;
+	margin-top     : -8px; 
+	margin-left    : -8px; 
+	-webkit-filter : blur(5px);
+	-moz-filter    : blur(5px);
+	-o-filter      : blur(5px);
+	-ms-filter     : blur(5px);
+	filter         : blur(5px);
+	clip           : rect(2px,365px,457px,2px);
+}
+
+.row {
+	margin : 0px;
+}
+
+
+.like-btn-wrapper {
+	padding : 15px;
+}
+
+.main-container {
+	margin-top: 20px;
+	position : relative;
+
+}
+
+.fb-container {
+	padding  : 15px;
+	color    : #FFF;
+}
+
+.accept-wrapper {
+	font-size : 18px;
+}
+
+.modal-body {
+	padding : 15px 25px;
+	max-height: 400px;
+	overflow-y: scroll;
+}
+
+@media ( max-width : 570px ) {
+
+	.main-container {
+		margin-top : 10px;
+
+		
+	}
+
+	.fb-container {
+		padding : 5px;
+
+		h1 {
+			font-size : 22px;
+			font-weight: 700;
+		}
+
+		h3 {
+			font-size : 16px;
+		}
+	}
+
+	.image-container {
+		height : 425px;
+		.splash-bg {
+			
+		}
+
+	}
+	
+}
+
+@media ( max-width : 420px ) {
+	.image-container {
+		position   : absolute;
+		width      : 100%;
+		height     : 100%;
+		overflow   : hidden;
+		text-align : center;
+	}
+
+	.splash-bg {
+		width          : 105%;
+		height         : 105%;
+		margin-top     : -8px; 
+		margin-left    : -8px; 
+		-webkit-filter : blur(5px);
+		-moz-filter    : blur(5px);
+		-o-filter      : blur(5px);
+		-ms-filter     : blur(5px);
+		filter         : blur(5px);
+		clip           : rect(2px,365px,457px,2px);
+	}
+}
+</style>
+
 
 </head>
 <body>
 	<div id="fb-root"></div>
 	<script src="http://connect.facebook.net/en_US/all.js"></script>
 	<script>
-	         FB.init({
-			    appId  : 'YOUR APP ID',
-			    status : true, 
-			    cookie : true, 
-			    xfbml  : true  
-			  });
-	       // console.log(FB)
-
-	    	
-
 		(function(d, s, id) {
 
 		  var js, fjs = d.getElementsByTagName(s)[0];
@@ -32,6 +149,8 @@
 		  js.src = "//connect.facebook.net/en_US/sdk.js";
 		  fjs.parentNode.insertBefore(js, fjs);
 		}(document, 'script', 'facebook-jssdk'));
+
+		
 	</script>
 
 	<!-- NAVBAR -->
@@ -46,7 +165,7 @@
 	        <span class="icon-bar"></span>
 	      </button> -->
 	      <a class="navbar-brand" href="#">
-			<img src="img/banner_nuat.png" alt="" height="50">
+			<img src="http://i66.photobucket.com/albums/h243/Dmc69/banner_nuat.png" alt="" height="50">
 	      </a>
 	    </div>
 
@@ -57,7 +176,7 @@
 	<!-- container body -->
 	<div class="row">
 		<div class="image-container">
-			<img class="splash-bg" src="img/nuat-thai3_2.jpg" alt="">
+			<img class="splash-bg" src="http://i66.photobucket.com/albums/h243/Dmc69/nuat-thai3_2.jpg" alt="">
 		</div>
 		<div class="container-wrapper col-md-12">
 			<div class="container">
@@ -69,12 +188,12 @@
 						</div>	
 						<!-- Button trigger modal -->
 						<div class="accept-wrapper">
-							<input type="checkbox" id="i-agree" > <span>I have accepted the <a data-toggle="modal" data-target="#myModal" >terms and conditions</a> set by this establishment.</span> <hr>
+							<input type="checkbox" id="i-agree" onclick="checker()" > <span>I have accepted the <a data-toggle="modal" data-target="#myModal" >terms and conditions</a> set by this establishment.</span> <hr>
 							<form method="post" id="login" action="http://192.168.1.1:5280/">
 								<input type="hidden" name="accept_terms" value="yes">
 								<input type="hidden" name="redirect" value="https://www.facebook.com/NuatThaiTalamban">
 								<input type="hidden" name="mode_login">
-								<input type="submit" value="Accept Terms of Use" class="btn btn-primary">
+								<input id="accept-btn" type="submit" value="Accept Terms of Use" class="btn btn-primary" disabled>
 							</form>
 						</div>
 						
@@ -183,9 +302,20 @@
 	</div>
 	
 	<!-- JAVASCRIPT -->
-	<script type="text/javascript" src="js/jquery-2.1.1.min.js" ></script>
-	<script type="text/javascript" src="js/less.js" ></script>
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="js/plugins/fb_setup.js"></script>
+	
+
+	<script>
+
+		function checker () {
+			var checkbox  = document.getElementById( "i-agree" );
+			var acceptBtn = document.getElementById( "accept-btn" );
+
+			if( checkbox.checked ) {
+				acceptBtn.disabled = false;
+			}else {
+				acceptBtn.disabled = true;
+			}
+		}
+	</script>
 </body>
 </html>
