--- a/index.html
+++ b/index.html
@@ -6,14 +6,22 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<title>Nuat Thai by Golden Leaf</title>
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-
-	<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-
-	<script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js" ></script>
 
 <style>
 
+body {
+	font-family : "Helvetica Neue",Helvetica,Arial,sans-serif;
+	font-size   : 14px;
+	line-height : 1.42857143;
+	color       : #333;
+	margin : 0px;
+}
+nav {
+	position: relative;
+	min-height: 50px;
+	margin-bottom: 20px;
+	width : 100%;
+}
 .navbar-brand {
 	padding     : 5px 45px;
 	line-height : 58px;
@@ -51,7 +59,8 @@
 }
 
 .row {
-	margin : 0px;
+	margin   : 0px;
+	position : absolute;
 }
 
 
@@ -78,6 +87,72 @@
 	padding : 15px 25px;
 	max-height: 400px;
 	overflow-y: scroll;
+}
+
+.btn {
+	margin  : 5px 0px;
+	display: inline-block;
+	padding: 6px 12px;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 1.42857143;
+	text-align: center;
+	white-space: nowrap;
+	vertical-align: middle;
+	cursor: pointer;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	background-image: none;
+	border: 1px solid transparent;
+	border-radius: 2px;
+}
+
+.btn-primary {
+	color: #fff;
+	background-color: #428bca;
+	border-color: #357ebd;
+}
+
+.btn-primary[disabled] {
+	background-color: #428bca;
+	border-color: #357ebd;
+	pointer-events: none;
+	cursor: not-allowed;
+	filter: alpha(opacity=65);
+	-webkit-box-shadow: none;
+	box-shadow: none;
+	opacity: .65;
+}
+a {
+	color           : #428bca;
+	text-decoration : none;
+	cursor          : pointer;
+}
+
+a:hover {
+	cursor          : pointer;
+	color           : #2a6496;
+	text-decoration : underline;
+}
+
+.fade {
+	opacity : 0 !important;
+	z-index: 0 !important;
+	display: block;
+    -webkit-transition: opacity 1s ease-out;
+    height: 0!important;
+    overflow: hidden;
+}
+
+.overlay.fade.in{
+	opacity: 0.7 !important;
+    height: 100% !important;
+}
+.fade.in {
+	    opacity: 1 !important;
+    	height: 100% !important;
 }
 
 @media ( max-width : 570px ) {
@@ -133,6 +208,63 @@
 		clip           : rect(2px,365px,457px,2px);
 	}
 }
+
+@media ( max-width : 767px ) {
+	.modal-dialog {
+		width            : auto !important;
+		margin           : 60px 10px !important;
+	}
+}
+
+/* ================== modal=========================*/
+
+#myModal {
+	position : absolute;
+	z-index  : 2050;
+	width  : 100%;
+	height : 100%;
+
+}	
+.modal-dialog {
+	position : relative;
+	width            : 600px;
+	margin           : 60px auto;
+	background-color : #fff;
+	border-radius    : 6px;
+	box-shadow: 10px 10px 30px #282828;
+}
+.overlay {
+	position : absolute;
+	width  : 100%;
+	height : 100%;
+	background-color: #000;
+	opacity : 0.7;
+	z-index : 2000;
+}
+.modal-header {
+	min-height: 12px;
+	padding: 10px;
+	border-bottom: 1px solid #e5e5e5;
+}
+.close {
+	-webkit-appearance: none;
+	padding: 0;
+	cursor: pointer;
+	background: 0 0;
+	border: 0;
+	float: right;
+	font-size: 27px;
+	font-weight: 700;
+	line-height: 1;
+	color: #000;
+	text-shadow: 0 1px 0 #fff;
+	filter: alpha(opacity=20);
+	opacity: .2;
+	margin-right: 15px;
+	margin-top: 10px;
+}
+
+
 </style>
 
 
@@ -175,9 +307,6 @@
 
 	<!-- container body -->
 	<div class="row">
-		<div class="image-container">
-			<img class="splash-bg" src="http://i66.photobucket.com/albums/h243/Dmc69/nuat-thai3_2.jpg" alt="">
-		</div>
 		<div class="container-wrapper col-md-12">
 			<div class="container">
 				<div class="col-xs-12 col-sm-4 col-md-7 col-lg-7">
@@ -188,7 +317,7 @@
 						</div>	
 						<!-- Button trigger modal -->
 						<div class="accept-wrapper">
-							<input type="checkbox" id="i-agree" onclick="checker()" > <span>I have accepted the <a data-toggle="modal" data-target="#myModal" >terms and conditions</a> set by this establishment.</span> <hr>
+							<input type="checkbox" id="i-agree" onclick="checker()" > <span>I have accepted the <a data-toggle="modal" data-target="#myModal" onClick='showModal()'>terms and conditions</a> set by this establishment.</span> <hr>
 							<form method="post" id="login" action="http://192.168.1.1:5280/">
 								<input type="hidden" name="accept_terms" value="yes">
 								<input type="hidden" name="redirect" value="https://www.facebook.com/NuatThaiTalamban">
@@ -214,12 +343,12 @@
 	<!-- container body -->
 
 	<!-- MODAL FOR TERMS OF USE -->
-
-	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	<div id="modal-overlay" class="overlay fade"></div>
+	<div class="modal fade" id="myModal">
 	  <div class="modal-dialog">
 	    <div class="modal-content">
 	      <div class="modal-header">
-	        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+	        <button type="button" class="close" data-dismiss="modal" id="close-modal" onclick="closeModal()"><span aria-hidden="true">&times;</span></button>
 	        <h3 class="modal-title" id="myModalLabel">WI-FI Access Terms and Conditions</h3>
 	      </div>
 	      <div class="modal-body">
@@ -315,6 +444,15 @@
 			}else {
 				acceptBtn.disabled = true;
 			}
+		}
+
+		function showModal () {
+			var overlay = document.getElementById( 'modal-overlay' );
+			var modal = document.getElementById('myModal');
+			console.log('click')
+
+			overlay.classList.add( 'in' );
+			modal.classList.add( 'in' );
 		}
 	</script>
 </body>
